# AudioMerge

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hyq/hm/audiomerge/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hyq/hm/audiomerge/activity/: AudioListActivity.java  MainActivity.java
app/src/main/java/com/hyq/hm/audiomerge/audio/: AudioHolder.java
app/src/main/java/com/hyq/hm/audiomerge/lame/: SimpleLame.java
app/src/main/java/com/hyq/hm/audiomerge/mediacodec/: AudioEncoder.java  AudioPlayer.java
app/src/main/java/com/hyq/hm/audiomerge/view/: SquareTextView.java
app/src/main/res/layout/: activity_main.xml  item_audio.xml  item_list_audio.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hyq/hm/audiomerge/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ringdroid/: build.gradle
ringdroid/src/androidTest/java/com/example/ringdroid/: ExampleInstrumentedTest.java
ringdroid/src/main/: AndroidManifest.xml
ringdroid/src/main/java/com/ringdroid/: AfterSaveActionDialog.java  ChooseContactActivity.java  FileSaveDialog.java  RingdroidEditActivity.java  SamplePlayer.java  WaveformView.java
ringdroid/src/main/java/com/ringdroid/soundfile/: SoundFile.java
ringdroid/src/main/res/drawable/: radius_confirm.xml
ringdroid/src/main/res/layout/: editor.xml
ringdroid/src/main/res/values/: colors.xml  strings.xml  styles.xml
ringdroid/src/test/java/com/example/ringdroid/: ExampleUnitTest.java
